--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/582d29966e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Tenis Store</title>
 </head>
 <body>
-    
+    <header class="section-one">
+        <div class="menu">
+            <div class="logo">
+                <a href="">Tênis Store</a>
+            </div>
+            <nav class="menu-nav">
+                <ul>
+                    <li><a href="">Masculino</a></li>
+                    <li><a href="">Feminino</a></li>
+                    <li><a href="">Infantil</a></li>
+                    <li><a href="">Customizar</a></li>
+                    <li><a href="">Sobre nós</a></li>
+                </ul>
+            </nav>
+
+            <div class="menu-icons">
+                <a href=""><i class=" fa-lg fa-solid fa-magnifying-glass"></i></a> 
+                <a href=""><i class=" fa-lg fa-sharp fa-solid fa-bag-shopping"></i></a>
+                <a href=""><i class=" fa-lg fa-regular fa-circle-user"></i></a> 
+            </div>
+        </div>
+        <div class="info-menu">
+            <h1>Entre no estilo com nosso tênis da moda!</h1>
+            <span>2023</span>
+            <p>
+                Nossas coleções incluem uma ampla variedade de sapatos para homens, mulheres e crianças.
+                </p>
+            <a href="">Shop Now</a>
+        </div>
+        <div class="banner">
+            <div class="img-banner">
+            <img src="assets/images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
