feat: section-two

--- a/index.html
+++ b/index.html
@@ -36,19 +36,38 @@
                 <a href=""><i class=" fa-lg fa-regular fa-circle-user"></i></a> 
             </div>
         </div>
-        <div class="info-menu">
-            <h1>Entre no estilo com nosso tênis da moda!</h1>
-            <span>2023</span>
-            <p>
-                Nossas coleções incluem uma ampla variedade de sapatos para homens, mulheres e crianças.
-                </p>
-            <a href="">Shop Now</a>
-        </div>
+
         <div class="banner">
-            <div class="img-banner">
-            <img src="assets/images/banner.png" alt="">
+
+            <div class="info-banner">
+                <h1>Entre no estilo com nossos sapatos da moda!</h1>
+                <span>2023</span>
+                <p>Nossas coleções incluem uma ampla variedade de sapatos para homens, mulheres e crianças.</p>
+                <a href="">Comprar</a>
+            </div>
+            <div class="background-banner">
+                <img src="assets/images/banner.png" alt="">
             </div>
         </div>
     </header>
+    <section class="section-two">
+        <div class="div01">
+            <img src="assets/images/img01.png" alt="">
+        </div>
+        <div class="div02">
+            <ul>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+            </ul>
+        </div>
+        <div class="div03">
+            <div class="explore">
+                <a href="">Explore Mais</a>
+                <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </div>
+           
+        </div>
+    </section>
 </body>
 </html>
