feat: section-three

--- a/index.html
+++ b/index.html
@@ -1,73 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/582d29966e.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@600&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/582d29966e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <title>Tenis Store</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="section-one">
-        <div class="menu">
-            <div class="logo">
-                <a href="">Tênis Store</a>
-            </div>
-            <nav class="menu-nav">
-                <ul>
-                    <li><a href="">Masculino</a></li>
-                    <li><a href="">Feminino</a></li>
-                    <li><a href="">Infantil</a></li>
-                    <li><a href="">Customizar</a></li>
-                    <li><a href="">Sobre nós</a></li>
-                </ul>
-            </nav>
-
-            <div class="menu-icons">
-                <a href=""><i class=" fa-lg fa-solid fa-magnifying-glass"></i></a> 
-                <a href=""><i class=" fa-lg fa-sharp fa-solid fa-bag-shopping"></i></a>
-                <a href=""><i class=" fa-lg fa-regular fa-circle-user"></i></a> 
-            </div>
+      <div class="menu">
+        <div class="logo">
+          <a href="">Tênis Store</a>
         </div>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="">Masculino</a></li>
+            <li><a href="">Feminino</a></li>
+            <li><a href="">Infantil</a></li>
+            <li><a href="">Customizar</a></li>
+            <li><a href="">Sobre nós</a></li>
+          </ul>
+        </nav>
 
-        <div class="banner">
-
-            <div class="info-banner">
-                <h1>Entre no estilo com nossos sapatos da moda!</h1>
-                <span>2023</span>
-                <p>Nossas coleções incluem uma ampla variedade de sapatos para homens, mulheres e crianças.</p>
-                <a href="">Comprar</a>
-            </div>
-            <div class="background-banner">
-                <img src="assets/images/banner.png" alt="">
-            </div>
+        <div class="menu-icons">
+          <a href=""><i class="fa-lg fa-solid fa-magnifying-glass"></i></a>
+          <a href=""><i class="fa-lg fa-sharp fa-solid fa-bag-shopping"></i></a>
+          <a href=""><i class="fa-lg fa-regular fa-circle-user"></i></a>
         </div>
+      </div>
+
+      <div class="banner">
+        <div class="info-banner">
+          <h1>Entre no estilo com nossos sapatos da moda!</h1>
+          <span>2023</span>
+          <p>
+            Nossas coleções incluem uma ampla variedade de sapatos para homens,
+            mulheres e crianças.
+          </p>
+          <a href="">Comprar</a>
+        </div>
+        <div class="background-banner">
+          <img src="assets/images/banner.png" alt="" />
+        </div>
+      </div>
     </header>
     <section class="section-two">
-        <div class="div01">
-            <img src="assets/images/img01.png" alt="">
+      <div class="div01">
+        <img src="assets/images/img01.png" alt="" />
+      </div>
+      <div class="div02">
+        <ul>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
+        </ul>
+      </div>
+      <div class="div03">
+        <div class="explore">
+          <a href="">Explore Mais</a>
+          <i class="fa-sharp fa-solid fa-arrow-right"></i>
         </div>
-        <div class="div02">
-            <ul>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-            </ul>
-        </div>
-        <div class="div03">
-            <div class="explore">
-                <a href="">Explore Mais</a>
-                <i class="fa-sharp fa-solid fa-arrow-right"></i>
-            </div>
-           
-        </div>
+      </div>
     </section>
-</body>
+
+    <section class="section-three">
+        <div class="section-three-content">
+            <div class="banner-section-three">
+                <img src="assets/images/banner-section-three.png" alt="">
+            </div>
+            <div class="text-section-three">
+                <h2>Seja seu próprio nível</h2>
+                <p>Os sapatos certos podem levar qualquer roupa do básico ao elegante com apenas alguns passos. Na nossa sapataria, temos uma grande variedade de sapatos elegantes para o ajudar a criar o look perfeito. Dos tênis contemporâneos aos mocassins clássicos, temos algo para combinar com todos os gostos e ocasiões. Nossos sapatos são projetados para serem confortáveis, duráveis ​​e modernos, para que você possa ter a melhor aparência, independentemente do que estiver usando.</p>
+                <div class="comprar">
+                    <a href="#">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+  </body>
 </html>
