feat: section-six

--- a/index.html
+++ b/index.html
@@ -161,5 +161,18 @@
       </div>
 
     </section>
+
+    <section class="section-six">
+      <div class="content-section-six"> 
+        <div class="text-section-six">
+          <h2>Inscreva-se para obter um voucher mensal ou <span class="diferent-color"> 25% de desconto</span></h2>
+          <input type="email" placeholder="seuemail@email.com.br">
+          <button type="submit">Inscrever</button>
+        </div>
+        <div class="image-section-six">
+          <img src="assets/images/section-six/ryan-plomp-jvoZ-Aux9aw-unsplash_prev_ui 1.png" alt="">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
