--- a/index.html
+++ b/index.html
@@ -174,5 +174,38 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="logo">
+        <a href="#">Tênis Store</a>
+      </div>
+    
+        <nav class="nav-footer">
+          <ul>
+            <h3>Links</h3>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Cart page</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-footer">
+          <ul>
+            <h3>Contact</h3>
+            <li><a href="">Email</a></li>
+            <li><a href="">Linkedin</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-footer">
+          <ul>
+            <h3>Collection</h3>
+            <li><a href="">Men</a></li>
+            <li><a href="">Women</a></li>
+            <li><a href="">Children</a></li>
+          </ul>
+        </nav>
+      
+    </footer>
   </body>
 </html>
